# ChangeLog for games-misc/c++robots
# Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-misc/c++robots/ChangeLog,v 1.8 2013/11/14 22:01:12 mr_bones_ Exp $

  14 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org> c++robots-0.ebuild:
  tidy

  07 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> c++robots-0.ebuild:
  QA cleanup: Fix quoting.

  08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> c++robots-0.ebuild:
  virtual/glibc -> virtual/libc

  28 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> c++robots-0.ebuild:
  use epatch; inherit eutils; error check/messages

*c++robots-0 (01 Jan 2002)

  01 Jan 2002; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me for #7200.