@@ -1,5 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX proper-coding.patch 3366 SHA256 ed0532b80ed862c10c402dda086578d8031c93e04233f5b826433644acd96876 SHA512 c15a8f2be07e1aeb8a22ddf3c47caf9512cf15487735a211098e55f25a93284448beeacf6578e074b1b97f4e5ecbdb14f2b4e55f9b88a1795f06c816366996b6 WHIRLPOOL b3cef8fd6715b5ced63d1ad42a57ab81cc6b98d111809cc1cf8a40e73c8424ca405b4a718ead06456d34ed2bb6bc5a458a0dadbeb9cfab233b2cd7d92e3cbdb6
-DIST c++robots.tar.gz 10027 SHA256 2135474a30c532d85b758d2119e4625005cabbe1605f84991b3bb2d121a005bd
-EBUILD c++robots-0.ebuild 855 SHA256 00223665ba65304456d29c30df9c721b8214571ef5e65199457602d860c09e52 SHA512 1218e66f0c4e31157a51e0dee727cff0795def50996eff1085affcbd788791a857e8bdf5e86ebc78764efaa2a500e4f7d7120746d51f1d8200ee1b99ab32dd34 WHIRLPOOL 356586716c412353bf8c66350b338edc97c8987437fe286d9972000f6ae9f2101547117d9bb8e26ca049c0fae2c7cf8e4272b9fe8f7910a1ca6db0c6415ffd39
-MISC ChangeLog 878 SHA256 e64fb5eb2470c6db746de60a3eb9daf97958c922e659dac0c20b4546d9114fc8 SHA512 5920074e5939ad36227afae9f75c01d784a9bd42b351ca046ad0c5afd79b34001f1efcf422045365ae7aa90f48d2c60accf0cb745c3df6e210bd617b907596ef WHIRLPOOL 2c74c77340b7cc51991daa4681db6a71ee1409e01db6099a1bf751c702f45f3dbc81fd664ab42d5fc15c43f4c8f9a071fc8d97fa310ca3bd2878ec23544f7bc1
+DIST c++robots.tar.gz 10896 SHA256 8102fb0da308e6118676d54642cd6f652fcfa145384a7e830ca7103aaf02f3f5 SHA512 410a08c920f8e54abe74b085d67607bcc381e768c0127cf98eabab894a106d5d1466a1cac4146924b53c29ccffddd5eb77c9383c42b6fe6e48c7e89691e691f3 WHIRLPOOL 24483a323e2c7bbdc3e116635f1433ffd133e9886631373b7a660456078dde33a46c9479757cbc02d66c9aaa98811946eea5b791625fd0a340bd33ad9bdd8d04
+EBUILD c++robots-0.ebuild 847 SHA256 97a5d81618df3fd1097a93d89dd2e3be3902b3efedf22c99424319272b30ffca SHA512 dac4441a5ca8ab0d20119e3a4f75f58664238ff8984cb768e632534c11bfd14d9a80c9cbf5775bb7eaf218bda339465fd8f1c0c26b53e50399b9d513fc4e1a05 WHIRLPOOL fa18e94f7d89ee1b109f6ab78faa436b6bc319de36e09d79b0d66b34d3902ed3dee1e2969aac8b2cfc2c11587874d4d10635fcd4051d56d5b1c2903177c31184
+MISC ChangeLog 1001 SHA256 b94879439b3ccfcf1bb5f1233d1bc55c4b3bcb13f68a5dbd7010d50ce954d553 SHA512 4703498e03ef969062671a88c6b36b4b5c513478c3c532d94f82f6816896d258f236b62dfe2b632f797bd5c48a00ecfa3dc0b8e2510bdcc53423539bb128ba07 WHIRLPOOL 4eadd22fcbe26a5ae0631d42a2d946c4584320a80f671b45a8af223f8bc79fb6a3c0d1e02e8fe489e4d6fad891178fe4f81c84c2a73ec2206571ce96bda9bb95
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQGcBAEBCAAGBQJTUCjgAAoJEJQzkH1pP7W4oxgL/3gk76C6EPQ8Dexo5Ki3AMof
+PEI6lnUgUChX88bU0zt3p522pD8DMMBwhs3VxqckPa+Lyq1QgYmIkKQ+A+zwiutu
+yVQ1FjclsZFRUeJHMLq0aTIlWQOLLLi9I/4+fnVoO/jY4t9x8vhVGzmfpzC9UnNU
+42HJudwjJ77dmV6BsRzKvtayILdFZfyq+P4SXkM2vR6eVyxZCzPHHh7ImKxkPzNM
+/3DME0sf75+9CNUCzPZO1VZ5T3gMTd5x+XtWhDhOGWerUs8gbFN6QRRx4v847f88
+erGxM3/NFG4mlh9cnXV4gfULlC40TalXWxdDoXWB35VUeYveYvHRUYTg6RnQmeDh
+D0axJTRKbWFbut5IoI4DKqUx+pyU3lhr/9zmfZm75zG1GnZVHX6DrhWlhaVdvCse
+b5fPH7Yk3sVlgyUVzyr0h8IJKj63H8Yb7EBS/0CthCT+sFVkMrjmYe104qbMWihA
+V5QBGiqwszaUhWtfzcorUUuyV8g6FX15QG+X/ksJLw==
+=ZExJ
+-----END PGP SIGNATURE-----
