@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/c++robots/c++robots-0.ebuild,v 1.8 2013/11/14 22:01:12 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/c++robots/c++robots-0.ebuild,v 1.9 2014/04/17 19:17:30 ulm Exp $
 
 inherit eutils games
 
@@ -8,7 +8,7 @@ DESCRIPTION="ongoing 'King of the Hill' (KotH) tournament"
 HOMEPAGE="http://www.gamerz.net/c++robots/"
 SRC_URI="http://www.gamerz.net/c++robots/c++robots.tar.gz"
 
-LICENSE="as-is"
+LICENSE="BSD"
 SLOT="0"
 KEYWORDS="x86 ppc"
 IUSE="static"
