@@ -3,9 +3,9 @@ DESCRIPTION=ongoing 'King of the Hill' (KotH) tournament
 HOMEPAGE=http://www.gamerz.net/c++robots/
 IUSE=static
 KEYWORDS=x86 ppc
-LICENSE=as-is
+LICENSE=BSD
 RDEPEND=games-misc/games-envd
 SLOT=0
 SRC_URI=http://www.gamerz.net/c++robots/c++robots.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	af81d52c25ec93fbdff71e0efb0de7b7	games	016d5de1968de77e56a90938ed6e5aba	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=0b0dfe3a4b34f5c31445bd1b35b2832b
+_md5_=9d6ff2f6d7f46d1b520a50c297b5409e
