@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst test
+DEPEND=dev-libs/openssl netlink? ( dev-libs/libnl:3 ) pcre? ( dev-libs/libpcre ) sqlite? ( >=dev-db/sqlite-3.4 )
+DESCRIPTION=WLAN tools for breaking 802.11 WEP/WPA keys
+EAPI=5
+HOMEPAGE=http://www.aircrack-ng.org
+IUSE=+airdrop-ng +airgraph-ng kernel_linux kernel_FreeBSD +netlink +pcre +sqlite +unstable
+KEYWORDS=~amd64 ~arm ~ppc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux
+LICENSE=GPL-2
+RDEPEND=dev-libs/openssl netlink? ( dev-libs/libnl:3 ) pcre? ( dev-libs/libpcre ) sqlite? ( >=dev-db/sqlite-3.4 ) kernel_linux? ( net-wireless/iw net-wireless/wireless-tools sys-apps/ethtool sys-apps/usbutils sys-apps/pciutils ) sys-apps/hwids airdrop-ng? ( net-wireless/lorcon[python] )
+SLOT=0
+SRC_URI=http://download.aircrack-ng.org/aircrack-ng-1.2-beta3.tar.gz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=bc44028570b7df3d31f9c22a8d85653c
