@@ -8,4 +8,4 @@ LICENSE=GPL-2
 RDEPEND=dev-libs/openssl netlink? ( dev-libs/libnl:3 ) pcre? ( dev-libs/libpcre ) sqlite? ( >=dev-db/sqlite-3.4 ) kernel_linux? ( net-wireless/iw net-wireless/wireless-tools sys-apps/ethtool sys-apps/usbutils sys-apps/pciutils ) sys-apps/hwids airdrop-ng? ( net-wireless/lorcon[python] )
 SLOT=0
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	subversion	c12bdf4fcc82f86ad89b14c8f76c4026	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=acd9f0fda809daf21da1cc76da2dba6b
+_md5_=6f82bbf12dc53c7a9a33eea6759b5d9e
