@@ -16,29 +16,27 @@ AUX eapol_fix.patch 1014 SHA256 fcfaa1cfa75cbaac214ac3cb01b8401ff062f356acc75be3
 AUX ignore-channel-1-error.patch 2270 SHA256 aa2345b9ba7b59c79e54a5546f28398aaea4068c7030b520069e25f71cd029e4 SHA512 ab5f988316e9678b3040966f7041ae69a5afc2e41b762f76aa06fee8def0474703f5ebe006541f6066f896ea99ad8fe0b64063ad0a69012ed0d044e06b96473c WHIRLPOOL e6af56315b0fccdaadd0c74ff06a6446ace47950f6b2ce5862918b1dc48ba446935ca848bbc4a77fd31e148630033b22b0e16c14e6a176892d92c42a7451b9f2
 AUX process-group-leader.c 373 SHA256 153666625e942384648dafedbc8f37577fdf6a24060b04237913fd7f693f7bf7 SHA512 75a53fd739ec533742093607361b1d72f611329083f804a3345ddc74c158c11a07a3efa89906ec34b7e81bca8dc2eccfc01658e0fc996346f50b3acf1fe980c2 WHIRLPOOL 95044a420715c061c6c8d9b89cbc71079281efa9288c08bb3bc61ccc1b83b095389d4a264eadcf4d26463f2d66e00420054ee74f7c0a1eb0ccefd29fc9a21af4
 DIST aircrack-ng-1.1.tar.gz 1453272 SHA256 b136b549b7d2a2751c21793100075ea43b28de9af4c1969508bb95bcc92224ad SHA512 e2246c3e5bb61a7294b8483ba7865a7da78c35c0444ded51e61076b1b15a1329c757de2828b6a23ab399a77c1c51949cb6833cfa2823c1f8819c8c12f7799270 WHIRLPOOL 37592c80250cb92ab0a1cf25beffffd3449434721068d586731c2669b10bf0ab2461ede664614e0286581a5ccd8e8721181c367d9774700c1c72ca8c640d2530
-DIST aircrack-ng-1.2-beta1.tar.gz 3457757 SHA256 f12339ad3316ebe7615d2e863adf200465a3f4cf922046476d595caccf8a8ea5 SHA512 e436443251d4c7895c6c2a71abde382222b2e4fc0856271dfb9825eb4b00383523dfcc0d8c1e8e807a5420cecf9f512adf8564e02cee70f03bd33db3568f5afe WHIRLPOOL d9107bca7ccc18ed2b73bfaa095b194b6e2d8eca6275f3e06b593df03d3f9ca6b5629e3250dfecdbf854d0e566e9377eff53ff65ab6d5722dc36eeef8e6c81f6
-DIST aircrack-ng-1.2-beta2.tar.gz 3447205 SHA256 ef7181f15462767249fde88219a503f27a7aee6f98b38e7e7d33a7b32880fbde SHA512 c1f680b9093748a5d398fe99ca122639019d03aad14f59f423da4644f1e207ee0cdd82bbf001ba64b8aacc5523282ab22fad0a2bc26a1035659dc1cdf13f9f96 WHIRLPOOL 0ea0f8317c7e440f7124f183a7ac30f022ac322d6927962678059ea1b07d1b37ec4d3dd2f53d26d1d2aa2d2bbf8fc4351674607262e854d0eb5b9a46ef3e2d99
+DIST aircrack-ng-1.2-beta3.tar.gz 2053021 SHA256 2d22ae13360d466ffff1699cb1300ce5f807ffe9762314bb60ee49d9d2efe98d SHA512 f6d17be10b8277f08d8867b4ced5a89f9de13cc59767958a6c617e583724d0baaafdda6c14ef3c1671cada2a5abdf885b49728910fb64d70a41ace9043b3e372 WHIRLPOOL 6c2ed9d45ff4122a15af1f95c2ee91c5df25bffe940814ff20a46d51b442d8295a55c1b7524454cfa82f27f2f3a1b3cde069139cf48fadffb87c514cba34ced0
 EBUILD aircrack-ng-1.1-r2.ebuild 2256 SHA256 80dba3e8a0c29a26247bb24121bdb72ab9caa95bd7754bd23f441d7132a3042c SHA512 aecec438af459d967e129b48946217600f39e9932fb74db6e7506d7a2c82ba3ae276167d2f91a339bbe60ec8c0747446b4fd415d291c1c0040af39856a5454be WHIRLPOOL 3f82e245e7066976604d4c6d141a79ff1aa321b86540bed263cfef8fdf14c75531efe1cc6b9bb66e56a0c5435c85d8c41bf6acf2a5001a1fb2d2004314b32575
 EBUILD aircrack-ng-1.1-r4.ebuild 2732 SHA256 03dad5c6d19b80a60ea9a366f03702999c4be5a6ccb309074e669b4fd3af3c78 SHA512 c653ed18aff24fc337d159d499823779391b0db717875f2ebb2a38d5d9daff946228c0b96a1e14bfc7c168179a7d44848c0a3c38fc8a9d5857612628b2eb69c4 WHIRLPOOL cd577b154b08e78884edd8947660fb38cef191fb280997bb3e2de13d6b32a722665e8cd55ea477dd325605cb0f6044f54cd72cb4a22dcb5004a4205b262d5fc1
-EBUILD aircrack-ng-1.2_beta1.ebuild 2598 SHA256 016045dfff06a11e89b4116e1cbc4861c017fa268deec9aa5a428519040493a0 SHA512 85e3ecb5b1a87ff9d080738c5f1b61452abefd36f1520f206ad0ba5a1ef860e292fb0374adf626672f87b72493f16a11923a087b9a8d2bd72da8fc8705c245fd WHIRLPOOL 212b679d089098c8b06eeb30e8e55281fa9ac647d91f414bbfc913241c243ac03ccd777da565bd07b89a4e365c2387e0d6a82b8fbb039bc0c26cf054097f7cab
-EBUILD aircrack-ng-1.2_beta2.ebuild 2673 SHA256 b739dda2ea24597889b3955d516bbad33992bbd3b62597c3e4bb6c6cee8bfa6f SHA512 4675d41ed5765838b61c411e6f7f01f94d1582446738a6ff0d96efec47fceff7e46a92c077ab426f2294105ffd42e1596e9175c38aefe5bfe361e0e3780f89da WHIRLPOOL d0ff143397786a0aef75124f004e98b066608ca452b772e03ab7b15bd4f4c328cd6fd808af191db245607a83fe79f8e59d05593f4b99dc9748f36619c6d47208
-EBUILD aircrack-ng-9999.ebuild 2872 SHA256 593f91593360f0393126af3281b3bf16e8539792ed07903bb7a7c86b57ded184 SHA512 6546dd3ed0e1b53d0b2610adcfd32e8b251e089f7f7e6f4eac647b696d0352ed960a8d0c296d1c9e6f36b471c965b51c416166c67b5ad9a63bed59f1373d476a WHIRLPOOL 568d17eea83a19223f67201a7b7007e9f0dcd04350cc8ef0f73fd2b0ed98cdfbd2f82062bf032f4885cac8658a5a25b7a50e9b4f7010b0b840e17321eb9853db
-MISC ChangeLog 12441 SHA256 0f7d69ae2f21d5dd64295606e2cc1f4154847f44229425056029b858b2882d5f SHA512 5dfe5f274fd4e3a235e6f205928005365e5ef312d69dc66434f4bd5d56d73ea4ebcf0885b3b1a31a61085327a831f84eab8f9c05d48a97cfdb68af7be4cecaa0 WHIRLPOOL 0f334a0949c5a374fedd8322e65a2be13d6abf5ab3e0e2682e793a89e01c00c6a35bb0e1713f3cd49308a0deef13a59aac07a09057f275172831737934b33d7c
+EBUILD aircrack-ng-1.2_beta3.ebuild 3113 SHA256 ae0a2abe484dfaf504732fd8d40e4e55e8932b7190856dd7035c1afab138f5cd SHA512 391bc3031835e37970788df31d30485d2a35355bc8ae3a48e436b5673235dd1a6357c49086e46aaabdab57eacd9b08c61474ff9a60b3c0f150ad84c9723a594e WHIRLPOOL f05dfcfa44d26d9a90d6df568a533e3e8e3f8602f9e9aad77f1c2e1845ea205a7bf04b1466a0fd94b98ceb42ed7004e14cd5faf4bcdfca72fa5e1b52a7f26b5d
+EBUILD aircrack-ng-9999.ebuild 3108 SHA256 7fd19078ecef740ce65d5bf2a7bde84fd9da9b335eed09fa268014cb6573c0ac SHA512 27c92dfea2a9692bbc36947621e4616d04ee40c846f18161f2df353bf458ede25e52500edd41e3bcd433cea91338ae3ab39c680d4ee8013d49e09879a0409523 WHIRLPOOL f579a1619e9df4694c7993559217bc989f8f23c9d439dc7baa9496885902d1ab8803d2abef1405555fbcea2c852e55befde09fbd7a0ad70cf75c9bbe72c900b7
+MISC ChangeLog 12682 SHA256 33d01e52120a36b1f4decd5ad316c6ded9d51b9f83599bb3f1c0161dcc3dc9bb SHA512 ef8457a4d6a1f06d1d2e06c983a770d14d127aa642a0cf6c04e1ccd921c9bcc4e92e4b2bb254b3b992da64a94b8f241b84ce4d0406c6eddf7e05f44c825aa08c WHIRLPOOL 421b4bf1aac518edb2970e544527537148370665553c9e89457b48f264bde78623546b3a8f9ecd6828727ca1ad62af0773c2fd1bb62a9d650c7754019b2f3e18
 MISC metadata.xml 817 SHA256 9cb2b1c61779baaa8c53ad94a131334dcc380c365e3ce2a91cf4a2391edafa5b SHA512 e481c5eefbee13b7ea53900db1fba01cac98bb2213d01365f264cdeade3ce84b0c14021a0817b3269c03fad9e45b9164726ce14812cf704133191779c6b7ea8e WHIRLPOOL 95479f33ae3e88505a77f8ac8246a35dd29b60e2ee57262c043c880d1a8f34c3aa4c45db6aace401799ef749d55ba5528eb0d3b9ef2b6d8315e0805f7b9fe223
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJTOI6sAAoJEKXdFCfdEflK/yQP/2VsdFPbsHbaRjLpHOM0dmO5
-51fTPpGWQwhdGZ7P6X4Y7EZa40N5NsZ7JBRGjmE8zXcwYfvHzK2LFWH9jU/mp/T2
-Z7D5qi40dHlmwjddR4b7eyo1SJbsqkoy2n1b+ik/AdAdjjIMN5jAAZXj1daYcqW+
-hKlBvLEM+SmYw2FHv47tbPmDqEkYBEhXvpNGkfsVHhhhuotxN1rCa+mYEKeAhJga
-Zxu3aQW/s5j8CwyV551RYJxurX2MA5o2rLdZRRuDhf7Ohe/je5RDYNHX3d/+UFrT
-48RlRfEdoeNBFjscsjyM5LZixE5WgJ1U0r1mioVO3ccdvq/5c/nJgvQxd4aZhojX
-iKDaFTM7WHmlNtsBsRNwiIogOlVmv9OfiNxKuZCNyhktXLCTDFMc9YIA82yaQ7zw
-4RPNyli+ASvCzq85VT9ici1yHX3lMCv+iJ0KdukrslPhFz8W+2lS1bst0en/70ND
-7XeUHu/eRra738BuEElIzFSEcX5O/GSHKHUnZiXPaMyQBRckVivNEBiyyGr67Pbe
-uwAcj/b4tMUilqTKvP4RT8PpUHaNJULD9zJl4e9Nn5VxuPqNqid02xmwQWYTA1UP
-wAbRGPj3IEtFQyZEIp0vXZtVl8cQEKlOuv8AiPrdXQUgrMtkc8FQBJBH9JRB5iWd
-E0mmm6u3UskKqU7ZZwLU
-=TMyB
+iQIcBAEBCgAGBQJTUCiTAAoJEKXdFCfdEflKzX4QAJi2gMLHXGCR7LB29ZPAisYu
+PtHqvjRlmim3El8rEHWXc1DsrlIRuU4biEViF7ZRy10IxKvzga0MUHrxVkK/LsSF
+Jnm3lh1ugOQXrB/xPIr1D5jVSfE2zV9p99/v/RMzaapbFa/aIjXTF0UG2g4Vt5IJ
+nrYRrv/V0LFZZ6vL56wRruvspMAUGk+w7fz9veKDTfDffck2SWqrHomQF0GSXhaY
+MhfeUbSONj85A6BmhQzONktwEllNHpy6rWNfvKYw/VV8dXenhmtnAG7uxjXtY0nM
+oAF0U2Re2X88AyMLdcUJNjDh3zoYvU6JoGT/0Aa6R3QGX2V9WhmJBO3+bHOjPXrL
+oYiuxtIzx2Mgpfv7O6bGja+gtL0eP9E6RmlSqi16j+dMAXa1Fr4f/ChspD4p4ivk
+7yWsrObmy78OAhtps193Hv5P3+szPnmRdbmfpUfQDj16bHtXPW4BX/YCqVaF2k5y
+EALJ30nGof64IZjQ65GZKyqmtuLxuhVYoKpQJdrugmEBhejDo1bX0AlObLwFXkW/
+acUo9Am53rM3avMHVuONLfMrQ7HSFN+ypQ/PL2LjQhKzJQRaxUc7QjTw1dzEHMWl
+B4Rik54ngZhZsnSufspCn1g4iyrvu4Dv/E1ul70IW+89SxDf0BnUDNG1tdRGQ5Tm
+Ruq8IRzHnbbhaLnP/oOC
+=zNpm
 -----END PGP SIGNATURE-----
