@@ -1,6 +1,13 @@
 # ChangeLog for net-wireless/aircrack-ng
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/ChangeLog,v 1.80 2014/03/30 21:36:10 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/aircrack-ng/ChangeLog,v 1.81 2014/04/17 19:14:33 zerochaos Exp $
+
+*aircrack-ng-1.2_beta3 (17 Apr 2014)
+
+  17 Apr 2014; Rick Farina <zerochaos@gentoo.org> +aircrack-ng-1.2_beta3.ebuild,
+  -aircrack-ng-1.2_beta1.ebuild, -aircrack-ng-1.2_beta2.ebuild,
+  aircrack-ng-9999.ebuild:
+  bump to beta3, ebuild fixes
 
   30 Mar 2014; Rick Farina <zerochaos@gentoo.org> aircrack-ng-9999.ebuild:
   update live ebuild for pcre
