@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/c++robots
-# Copyright 2002-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/c++robots/ChangeLog,v 1.8 2013/11/14 22:01:12 mr_bones_ Exp $
+# Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-misc/c++robots/ChangeLog,v 1.9 2014/04/17 19:17:30 ulm Exp $
+
+  17 Apr 2014; Ulrich Müller <ulm@gentoo.org> c++robots-0.ebuild:
+  Update LICENSE, BSD according to LICENSE file, bug 505858.
 
   14 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org> c++robots-0.ebuild:
   tidy
